edit flex margins paddings

--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@
         </div>
     </header>
     <main class="main">
-        <section class="hero">
+        <section class="hero section">
             <div class="container">
-                <div class="hero-container">
-                    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                    <button class="hero-button" type="button">Заказать услугу</button>
-                </div>
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button class="hero-button" type="button">Заказать услугу</button>
             </div>
         </section>
-        <section class="advantages">
+        <section class="advantages section">
             <div class="container">
                 <h2 class="visually-hidden">Наши преимущества</h2>
                 <ul class="list advantages-list">
@@ -67,7 +65,7 @@
                 </ul>
             </div>
         </section>
-        <section class="doing">
+        <section class="doing section">
             <div class="container">
                 <h2 class="doing-title">Чем мы занимаемся</h2>
                 <ul class="doing-list list">
@@ -80,29 +78,37 @@
                 </ul>
             </div>            
         </section>
-        <section class="team">
+        <section class="team section">
             <div class="container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="list team-list">
                     <li class="team-item">
                         <img class="team-image" src="./images/team/image-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                        <h3 class="team-item-title">Игорь Демьяненко</h3>
-                        <p class="team-item-text">Product Designer</p>
+                        <div class="team-title-text-wrap">
+                            <h3 class="team-item-title">Игорь Демьяненко</h3>
+                            <p class="team-item-text">Product Designer</p>
+                        </div>                        
                     </li>
                     <li class="team-item">
                         <img class="team-image" src="./images/team/image-2.jpg" alt="Ольга Репина" width="270" height="260">
-                        <h3 class="team-item-title">Ольга Репина</h3>
-                        <p class="team-item-text">Frontend Developer</p>
+                        <div class="team-title-text-wrap">
+                            <h3 class="team-item-title">Ольга Репина</h3>
+                            <p class="team-item-text">Frontend Developer</p>
+                        </div>                        
                     </li>
                     <li class="team-item">
                         <img class="team-image" src="./images/team/image-3.jpg" alt="Николай Тарасов" width="270" height="260">
-                        <h3 class="team-item-title">Николай Тарасов</h3>
-                        <p class="team-item-text">Marketing</p>
+                        <div class="team-title-text-wrap">
+                            <h3 class="team-item-title">Николай Тарасов</h3>
+                            <p class="team-item-text">Marketing</p>
+                        </div>                        
                     </li>
                     <li class="team-item">
                         <img class="team-image" src="./images/team/image-4.jpg" alt="Михаил Ермаков" width="270" height="260">
-                        <h3 class="team-item-title">Михаил Ермаков</h3>
-                        <p class="team-item-text">UI Designer</p>
+                        <div class="team-title-text-wrap">
+                            <h3 class="team-item-title">Михаил Ермаков</h3>
+                            <p class="team-item-text">UI Designer</p>
+                        </div>                        
                     </li>
                 </ul>
             </div>            
