--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         </div>
     </header>
     <main class="gallery">
-        <section class="gallery-section">
+        <section class="gallery-section section">
             <div class="container">
                 <h1 class="visually-hidden">Галерея</h1>
                 <ul class="gallery-filter list">
